# Baseline1_Zprediction

./: .gitignore  README.md  actual_traj.csv  landing_states.csv  planned_traj.csv  tags.yaml
experiments_data/: Zprediction_0.5_1.0.csv  actual_traj.csv  baseline_data_0.3_1.0.csv  baseline_data_0.5_2.0.csv  baseline_data_0.8_2.0.csv  landing_deep_analysis.csv  landing_states.csv  planned_traj.csv  proposed_data_0.3_1.0.csv  proposed_data_0.5_1.0.csv  proposed_data_0.5_2.0.csv  proposed_data_0.8_2.0.csv
logs/classicalplanning/: build.make.009.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr
py_utils/: fake_boat.py  plot_data.py  plot_traj.py  rigid_deck.py  run_minco_batch_test.py
sh_utils/: auto_land.sh  land_triger.sh  pub_triger.sh  record_benchmark.sh  record_benchmark_perch.sh
src/classicalplanning/: package.xml
src/classicalplanning/config/: UAV_model.yaml  mockamap.yaml
src/classicalplanning/include/gcopter/: flatness.hpp  sfc_gen.hpp
src/classicalplanning/launch/: classical_planning.launch
src/classicalplanning/src/: main.cpp
src/detection/object_detection_msgs/: package.xml
src/detection/target_ekf/: package.xml
src/fake/fake_mapping/: nodelet_plugin.xml  package.xml
src/fake/fake_target_planning/: nodelet_plugin.xml  package.xml
src/fake/fake_traj_opt/: package.xml
src/mapping/: nodelet_plugin.xml  package.xml
src/mapping/config/: camera.yaml  (+3 more)
src/planning/planning/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/planning/planning/config/: config.bk.yaml  config.yaml  config_0.5pitch.yaml  config_1.5pitch.yaml  config_land_process.yaml  config_large_attitude.yaml  config_little_attitude.yaml  config_track.yaml
src/planning/planning/include/env/: env.corridor.hpp  env.hpp
src/planning/planning/include/map_interface/: map_interface.h  map_ros_interface.hpp  map_ssdbus_interface.hpp
src/planning/planning/include/node/: data_callback_node.h  plan_node.h  tl_fsm_node.h  traj_server_node.h
src/planning/planning/include/parameter_server/: parameter_server.hpp
src/planning/planning/include/planning/: tlplanner.h
src/planning/planning/include/prediction/: lbfgs.hpp  prediction.hpp  prediction_car.hpp
src/planning/planning/include/rotation_util/: rotation_util.hpp
src/planning/planning/include/target_ekf/: target_ekf_99.hpp  target_ekf_car.hpp  target_ekf_server.hpp  target_ekf_server_car.hpp
src/planning/planning/include/traj_opt/: csv_writer.hpp  flatness.hpp  geoutils.hpp  lbfgs_raw.hpp  minco.hpp  quickhull.hpp  root_finder.hpp  traj_opt.h  trajectory.hpp
src/planning/planning/include/util_gym/: data_manager.hpp  util_gym.hpp
src/planning/planning/include/visualization/: camera_vis.hpp  visualization.hpp
src/planning/planning/include/visualization_interface/: vis_interface.h  vis_ros_interface.hpp  vis_ssdbus_interface.hpp
src/planning/planning/include/wr_msg/: wr_msg.hpp
src/planning/planning/launch/: debug.launch  log.launch  planning.launch  simu_map_and_sensor.launch  simulation1.launch  simulation2.launch  simulation_landing.launch  simulation_tl.launch
src/planning/planning/src/node/: ReadMe.md  main_node.cpp  plan_node.cpp  test_trajopt.cpp  tl_fsm_node.cpp
src/planning/planning/src/node/data_callback/: data_callback.cpp  data_callback_ros_interface.cpp
src/planning/planning/src/node/traj_server/: traj_server_node.cpp  traj_server_ros_interface.cpp
src/planning/planning/src/planning/: planning_nodelet.cpp  play_bag_node.cpp  test.cpp  test_node.cpp  tlplanner.cpp  traj_server.cpp
src/planning/planning/src/traj_opt/: traj_opt_perching.cc  traj_opt_perching_yaw copy.cc  traj_opt_perching_yaw.cc  traj_opt_perching_yaw_full_q.cc  traj_opt_perching_yaw_softmin.cc  traj_opt_perching_yaw_softmin_full_q.cc  traj_opt_perching_yaw_softmin_margin.cc  traj_opt_s3_goal.cc  traj_opt_s3_goal_yaw.cc  traj_opt_s3_tracking.cc  traj_opt_s3_tracking_yaw.cc  traj_opt_s3u_goal.cc  traj_opt_s3u_tracking.cc  traj_opt_util.cc  traj_opt_visible_deform.cc  traj_opt_visible_deform_incre.cc
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/rosbag_direct_write/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml
(+102 files in other folders)
