<package>
  <!-- name是ros指令中要使用的包名 -->
  <name>classicalplanning</name>
  <version>0.0.1</version>
  <author email="Yuangchen@mail.sustech.edu.cn">Yuangchen</author>
  <maintainer email="Yuangchen@mail.sustech.edu.cn">Yuangchen</maintainer>
  <description>
      the classical planning methods for quadrotor landing
  </description>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  
</package>
